--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Sofia&display=swap');
+
+*{
+  box-sizing: border-box
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
