--- a/src/components/App.css
+++ b/src/components/App.css
@@ -122,4 +122,8 @@ header{
         width: 200px;
         height: 100px;
     }
+    .box{
+        font-size: 20px;
+        width: 500px;
+    }
 }
